style.css
/* 
    Developer: Joshua Odom
    Website link: https://joshuao22.github.io/JoshTechShop/
    Source Link: https://github.com/JoshuaO22/JoshTechShop
*/
body {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    min-height: 100dvh;
    /* makes page as tall as viewpoint (browser window) */
    background-color: #90050f;
}

header {
    background-color: #90050f;
    color: white;
    padding: 20px;
    text-align: center;
}

header h1 {
    margin: 0 0 10px 0;
}

nav {
    background-color: #ecf0f1;
    padding: 10px 20px;
    align-items: center;
    display: flex;
    flex-direction: column;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

nav ul {
    list-style: none;
    /* remove bullet points from list */
    margin: 0;
    padding: 0;
    display: flex;
    gap: 20px;
}

nav a {
    color: #2c3e50;
    text-decoration: none;
    /* remove underline from links */
    font-weight: bold;
}

nav a:hover {
    text-decoration: underline;
    /* underline link on hover */
}

main {
    margin: 0 0;
    padding-bottom: 20px;
    /* centers */
    flex: 1;
    /* grow main's container to fill page so footer is at the bottom */
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
}

main h2 {
    margin-top: 20px;
    margin-bottom: 20px;
}

main p {
    margin: 10px 0 20px 0;
    text-align: center;
}

main img {
    max-width: 100%;
    max-height: 300px;
    height: auto;
}

main iframe {
    margin: 20px 0;
    max-width: 100%;
    height: auto;
    aspect-ratio: 16/9;
    /* 16:9 aspect ratio for YouTube videos */
}

main form {
    background-color: #ecf0f1;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    gap: 15px;
    width: 100%;
    max-width: 400px;
    font-weight: bold;
}

main button {
    background-color: #90050f;
    color: white;
    border: none;
    padding: 10px;
    border-radius: 5px;
    cursor: pointer;
}

main button:hover {
    background-color: #70040b;
    transform: scale(1.05);
    transition: transform 0.2s;
}

footer {
    background-color: #90050f;
    text-align: center;
    padding: 15px;
}

footer p {
    margin: 0;
    color: #ffffff;
    font-weight: bold;
}

/* Mobile Responsive Design */
@media (max-width: 768px) {

    /* Stack menu columns vertically */
    nav ul {
        flex-direction: column;
        gap: 20px;
    }

    /* Header layout for phones */
    header {
        flex-direction: column;
        text-align: center;
        padding: 20px;
    }

    /* Smaller logos on mobile */
    header h1 {
        margin-bottom: 10px;
    }

    /* Navigation links stack nicely */
    nav a {
        display: block;
        margin: 0 0;
        text-align: center;
        font-size: 32px;
    }

    /* Slightly smaller menu text */
    main ul li {
        font-size: 16px;
    }
}

